@@ -113,11 +113,6 @@ android {
     }
 }
 
-ksp {
-    arg("room.schemaLocation", "$projectDir/schemas")
-    arg("room.incremental", "true")
-}
-
 configurations {
     // JNI-only libraries don't play nicely with Robolectric
     // see https://github.com/tuskyapp/Tusky/pull/3367
@@ -127,12 +122,15 @@ configurations {
 
 // library versions are in PROJECT_ROOT/gradle/libs.versions.toml
 dependencies {
+    implementation project(path: ':core:database')
+    implementation project(path: ':core:network')
+    implementation project(path: ':core:text')
+
     implementation libs.kotlinx.coroutines.android
     implementation libs.kotlinx.coroutines.rx3
 
     implementation libs.bundles.androidx
     implementation libs.bundles.room
-    ksp libs.androidx.room.compiler
 
     implementation libs.android.material
 
@@ -184,23 +182,6 @@ dependencies {
     androidTestImplementation libs.espresso.core
     androidTestImplementation libs.androidx.room.testing
     androidTestImplementation libs.androidx.test.junit
-}
-
-// Work around warnings of:
-// WARNING: Illegal reflective access by org.jetbrains.kotlin.kapt3.util.ModuleManipulationUtilsKt (file:/C:/Users/Andi/.gradle/caches/modules-2/files-2.1/org.jetbrains.kotlin/kotlin-annotation-processing-gradle/1.8.22/28dab7e0ee9ce62c03bf97de3543c911dc653700/kotlin-annotation-processing-gradle-1.8.22.jar) to constructor com.sun.tools.javac.util.Context()
-// See https://youtrack.jetbrains.com/issue/KT-30589/Kapt-An-illegal-reflective-access-operation-has-occurred
-tasks.withType(org.jetbrains.kotlin.gradle.internal.KaptWithoutKotlincTask) {
-    kaptProcessJvmArgs.addAll([
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"])
 }
 
 tasks.register("newLintBaseline") {
